# bianyiyuanli

./: .gitignore  CMakeLists.txt  README.md
docs/: final_report.md  semantic_ir_report.md  seulex_report.md  seuyacc_report.md  submission_manifest.md
examples/: feature_coverage.mc
output/: feature_coverage.ast.md  feature_coverage.ast.txt  feature_coverage.blocks.txt  minic_demo.ast.md  minic_demo.ast.txt
ppt/: compiler_lab_defense.pptx  quality-report.json
specs/: lex_features.l  minic.l  minic.y  precedence_demo.y
specs/samples/: lex_features.txt  minic_demo.c  minic_invalid.c  precedence_demo_invalid.txt  precedence_demo_valid.txt
src/common/: diagnostic.cpp  diagnostic.h  source.cpp  source.h  string_utils.cpp  string_utils.h  token.cpp  token.h
src/ir/: basic_block.cpp  basic_block.h  ir_builder.cpp  ir_builder.h  ir_printer.cpp  ir_printer.h  quad.cpp  quad.h
src/runtime/: parser_runtime.cpp  parser_runtime.h  scanner_runtime.cpp  scanner_runtime.h
src/semantic/: ast.cpp  ast.h  ast_factory.cpp  ast_factory.h  ast_printer.cpp  ast_printer.h  semantic_action_executor.cpp  semantic_action_executor.h  semantic_analyzer.cpp  semantic_analyzer.h  semantic_value.h  symbol_table.cpp  symbol_table.h  types.cpp  types.h
src/seulex/: dfa.cpp  dfa.h  dfa_minimizer.cpp  dfa_minimizer.h  lex_spec.cpp  lex_spec.h  lex_spec_parser.cpp  lex_spec_parser.h  nfa.cpp  nfa.h  regex_ast.h  regex_normalizer.cpp  regex_normalizer.h  regex_parser.cpp  regex_parser.h  scanner_emitter.cpp  scanner_emitter.h
src/seuyacc/: first_set.cpp  first_set.h  grammar.cpp  grammar.h  lalr.cpp  lalr.h  lr1.cpp  lr1.h  parse_table.cpp  parse_table.h  parser_emitter.cpp  parser_emitter.h  yacc_spec.cpp  yacc_spec.h  yacc_spec_parser.cpp  yacc_spec_parser.h
src/tools/: frontend_main.cpp  seulex_main.cpp  seuyacc_main.cpp
tests/: run_stage6_tests.ps1
tests/ast/: run_ast_tests.ps1
tests/ast/results/: ast_test_results.md
tests/frontend/: run_frontend_tests.ps1
tests/frontend/results/: frontend_test_results.md
tests/ir/: run_ir_tests.ps1
tests/ir/expected/: feature_coverage.blocks.txt  feature_coverage.ir.txt
tests/ir/inputs/: feature_coverage.c
tests/ir/results/: ir_test_results.md
tests/lex/: run_lex_tests.ps1
tests/lex/feature_subset/expected/: feature_mix.tokens.txt
tests/lex/feature_subset/inputs/: feature_mix.txt
tests/lex/minic/expected/: bom_input.tokens.txt  invalid_char.output.txt  keywords_and_identifiers.tokens.txt  literals_and_layout.tokens.txt  operators_and_delimiters.tokens.txt
tests/lex/minic/inputs/: bom_input.c  invalid_char.c  keywords_and_identifiers.c  literals_and_layout.c  operators_and_delimiters.c
tests/lex/results/: lex_test_results.md
tests/results/: stage6_test_results.md
tests/semantic/: run_semantic_tests.ps1
tests/semantic/inputs/: error_arg_type.c  error_assign_type.c  error_call_non_function.c  error_call_undeclared_function.c  error_condition_type.c  error_function_redefinition.c  error_init_type.c  error_param_redefinition.c  error_return_type_mismatch.c  error_return_void_value.c  error_while_condition_type.c  valid_scope_shadowing.c
tests/semantic/results/: semantic_test_results.md
tests/yacc/: run_yacc_tests.ps1
tests/yacc/results/: yacc_test_results.md
